# flight-journey-search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
src/application/: app.py  container.py  lifecycle.py  module_registry.py
src/domain/flight_events/: controller.py  flight_events.json  module.py  service.py
src/domain/journeys/: controller.py  module.py  service.py  test_journeys.py
src/infrastructure/config/: settings.py
